# TB3-Machine-Learning

./: README.md
.github/workflows/: ros-ci.yml
turtlebot3_dqn/: package.xml  setup.py
turtlebot3_dqn/launch/: turtlebot3_dqn_stage1.launch.py
turtlebot3_dqn/model/: stage1_episode100.h5  stage1_episode100.json  stage1_episode200.h5  stage1_episode200.json  stage1_episode300.h5  stage1_episode300.json  stage1_episode400.h5  stage1_episode400.json  stage1_episode500.h5  stage1_episode500.json  stage1_episode700.h5  stage1_episode700.json  stage1_episode800.h5  stage1_episode800.json  stage4_episode100.h5  stage4_episode100.json  stage4_episode200.h5  stage4_episode200.json  stage4_episode300.h5  stage4_episode300.json  stage4_episode400.h5  stage4_episode400.json  stage4_episode500.h5  stage4_episode500.json  stage4_episode600.h5  stage4_episode600.json  stage4_episode700.h5  stage4_episode700.json  stage4_episode800.h5  stage4_episode800.json  stage4_episode900.h5  stage4_episode900.json
turtlebot3_dqn/turtlebot3_dqn/: dqn_agent.py  dqn_environment.py  dqn_test.py
turtlebot3_dqn/turtlebot3_dqn/dqn_agent/: dqn_agent.py
turtlebot3_dqn/turtlebot3_dqn/dqn_environment/: dqn_environment.py
turtlebot3_dqn/turtlebot3_dqn/dqn_gazebo/: dqn_gazebo.py
turtlebot3_dqn/turtlebot3_dqn/dqn_test/: dqn_test.py
turtlebot3_dqn/turtlebot3_dqn/utils/: action_graph.py  result_graph.py
turtlebot3_machine_learning/: package.xml
